Spacing issues

--- a/src/User-Dashboard-Screens/UserDashboard.css
+++ b/src/User-Dashboard-Screens/UserDashboard.css
@@ -83,13 +83,6 @@ a {
 
 /* End of Navbar media queries */
 
-/* */
-
-/* .gf {
-  display: flex;
-  align-items: center;
-} */
-
 .cus {
   padding: 0 0.8rem 0 0.8rem;
   margin: 12rem 16rem 0 16rem;
